--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
     <body>
         <Navigation client:load />
 
-        <main>
+        <main class="mx-auto w-4/5">
             <slot />
         </main>
     </body>
