implemented project creation

--- a/src/pages/users.astro
+++ b/src/pages/users.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from '../components/Layout.astro';
-import UserPage from '../components/user/UserPage';
+import UsersPage from '../components/user/UsersPage';
 ---
 
 <Layout title="FileThing | Users">
-    <UserPage client:load />
+    <UsersPage client:load />
 </Layout>
